# ai-customer-support-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: confidence.py  graph.py  prompts.py  state.py
agents/nodes/: log_decision.py  (+11 more)
alembic/: README  env.py
config/: constants.py  settings.py
database/: crud.py  db.py  models.py  session.py
docs/: api_docs.md  api_keys_guide.md  architecture.md  build_log.md  memory_architecture.md  project_checklist.md  project_problem.md  project_problem_definition.md  rag_architecture.md  tech_stack.md
frontend/: gradio_app.py
memory/: conversation_history.py  customer_history.py  long_term_memory.py  memory_manager.py  memory_retriever.py  semantic_memory.py  short_term_memory.py  ticket_memory.py
observability/: langfuse_client.py
rag/: chunker.py  context_formatter.py  document_loader.py  embeddings.py  metadata_filter.py  retriever.py  text_extractor.py  vector_store.py
scripts/: ingest_documents.py  ingest_memory.py  run_evaluation.py  run_langfuse_eval.py  seed_database.py
tests/: test_agent_graph.py  test_api.py  test_crud.py  test_escalation.py  test_gradio_app.py  test_memory.py  test_retrieval.py  test_tools.py
tools/: classify_ticket_tool.py  create_jira_ticket_tool.py  draft_response_tool.py  escalate_to_human_tool.py  log_decision_tool.py  retrieve_memory_tool.py  retrieve_policy_tool.py  retrieve_similar_cases_tool.py  route_ticket_tool.py  send_email_tool.py  slack_notification_tool.py  summarize_ticket_tool.py  zendesk_mock_tool.py
(+20 files in other folders)
